--- a/latex/rbs-ptbr.tex
+++ b/latex/rbs-ptbr.tex
@@ -639,7 +639,7 @@ armazenadas nos nós da treap não têm outro uso que manter a árvore balancead
 \end{exc}
 
 \begin{exc}\exclabel{treap-join}
-  Projete e implemente uma versão de uma #Treap# que suporte a operação #absorb(t2)#, que pode ser concebida como o inverso da operação #split(x)#.  Esta operação remove todos os valores de #Treap# #t2# e os insere no receptor.  Esta operação pressupõe que o menor valor em #t2# é maior que o maior valor no recpetor.  A operação #absorb(t2)# deve exexutar em um tempo esperado de $O(\log #n#)$.
+  Projete e implemente uma versão de uma #Treap# que suporte a operação #absorb(t2)#, que pode ser concebida como o inverso da operação #split(x)#.  Esta operação remove todos os valores de #Treap# #t2# e os insere no receptor.  Esta operação pressupõe que o menor valor em #t2# é maior que o maior valor no receptor.  A operação #absorb(t2)# deve executar em um tempo esperado de $O(\log #n#)$.
 \end{exc}
 
 \begin{exc}
