--- a/latex/skiplists-ptbr.tex
+++ b/latex/skiplists-ptbr.tex
@@ -43,7 +43,7 @@ de uma skiplist é mostrado na \figref{skiplist}.
 Para um elemento, #x#, na skiplist, nós chamamos de \emph{altura}
 \index{altura!de uma skiplist}%
 de #x# o valor mais alto de $r$ de modo que #x# apareça em $L_r$.  Assim, por exemplo,
-elementos que só aparecem em $L_0$ tem altura $0$.  Se pararmos um momento pra
+elementos que só aparecem em $L_0$ tem altura $0$.  Se pararmos um momento para
 pensar sobre isso, percebemos que a altura de #x# corresponde
 à seguinte experiência:  lance uma moeda repetidamente até aparecer
 como coroa. Quantas vezes apareceu cara? A resposta, sem
